--- a/app/instructions.html
+++ b/app/instructions.html
@@ -74,12 +74,122 @@
 		<div class="content-container">
 			<div class="row">
 				<div class="twelve columns">
-					<div class="content">
-						<h1>Instructions</h1>
-					</div>
+					<h4>Guidelines for Submission</h4>
 				</div>
-			</div>			
+				<div class= "twelve columns">
+					<div class="content">
+						<p>
+							<span class="strong">Festival Date:</span>
+							July 6, 2013
+						</p>
+						<p><span class="strong">Deadline:</span> May 10, 2013</p>
+						<p><span class="strong">About the Global Health Film Festival: The Right To Heal</span></p>
+<p>The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. The festival aims to highlight the various issues surrounding healthcare, or the lack thereof, in the world. The particular focus of this festival is on the provision of surgical care in developing countries and how people in parts of the world live their lives unable to heal from surgical conditions they were born with, accidents that have happened, or from surgical complications of childbirth.
+</p>
+<p>We will focus our lenses on this topic and discuss them in depth. There will be a panel session after the festival exploring these issues.</p>
+<p>The guidelines outlined here explain GHFF’s focus and the types of films we are looking for:  
+</p>
+<div class="twelve columns">
+<ol>
+	<li>Short Films Only</li>
+	<p>
+		We are looking for 15-20 minute films exploring a particular issue listed in #2.
+	</p>
+	<li>
+		Project must fit GHFF's categories. We currently support films in the following categories with some examples:
+		<ul>
+			<li>Injuries</li>
+			<li>Maternal health</li>
+			<ul>
+				<li>obstructed labor</li>
+				<li>Obstetric fistulas</li>
+				<li>Hemorrhage</li>
+			</ul>
+			<li>Child health (e.g congenital defects)</li>
+			<ul>
+				<li>cleft lip/cleft palate</li>
+				<li>congenital clubfoot</li>
+			</ul>
+			<li>Other essestial surgical conditions</li>
+			<ul>
+				<li>inguinal Hernia</li>
+				<li>Appendicitis</li>
+			</ul>
+			<li>Emergency Care</li>
+		</ul>
+	</li>
+	<li>
+		Projects must explore a discrete issue in any of the categories mentioned
+	</li>
+	<li>
+		We are particularly interested in projects that also display:
+		<ul>
+			<li>Creative and innovative storytelling</li>
+			<li>Ongoing social issue</li>
+			<li>Potential for engagement</li>
+		</ul>
+	</li>
+	<li>
+		We do not accept films advertising a charity, NGO, NPO, or any commercial product, whether implicit or explicit in the film
+	</li>
+	<li>
+		Submitted films should either be in English or include English subtitles.
+	</li>
+	<li>
+		If a film is selected for theater presentation at the festival it is the responsibility of the filmmaker to provide GHFF with either an HDCAM tape or a 35mm film exhibition copy by June 15, 2013.
+	</li>
+
+</ol>
+</div>
+<div class="row">
+<div class="twelve columns">
+<p class="strong">Submission instructions</p>
+<p>
+	The submission season for 2013 will be open through May 10, 2013. No films will be accepted outside this time period. All submissions must come through our online form (link below).
+</p>
+<p>
+	Before clicking on the link to fill out the submission form, please be prepared to provide the following:
+	</p>
+	<div class="twelve columns">
+	<ol>
+		<li>Contact Information</li>
+		<li>Full film information including a short synopsis</li>
+		<li>A link to an online screener OR 2 DVDs</li>
+		<li>Acceptance of Rights and Releases</li>
+	</ol>
+	</div>
+</div>
+</div>
+<h4>Submit Now - hyperlink to form</h4>
+<p>
+	If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
+</p>
+<div class="twelve columns"></div>
+<p class="strong">Submission Materials</p>
+<p>
+	We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
+</p>
+<p class="strong">Shipping Information</p>
+<p>
+	If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
+</p>
+<h6>Send entries to:</h6>
+<p>
+	IGOT Global Health Film Festival
+2550 23rd Street
+Building 9, 2nd Floor
+San Francisco, CA 94110
+Office: +01 (415) 206-4261
+</p>
+
+
+
+					
+				</div>
+			</div>
 		</div>
+	</div>
+		
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
