--- a/app/partners.html
+++ b/app/partners.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
+		<script type="text/javascript" src="https://raw.github.com/kevinburke/tecate/master/tecate.js"></script>
 </head>
 <body>
 		<div class="header">
@@ -87,8 +88,9 @@
 			</div>
 			<div class="nine columns">
 				<div class="partner-text">
+					<h5>IGOT</h5>
 					<p>
-						This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						This is the description of IGOT.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
 				</div>
 			</div>
@@ -100,6 +102,7 @@
 			</div>
 			<div class="nine columns">
 				<div class="partner-text">
+					<h5>GPAS</h5>
 					<p>
 						This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
@@ -112,9 +115,24 @@
 					<img src="http://placehold.it/200x150&text=image+three+here"></div>
 			</div>
 			<div class="nine columns">
-				<div class="who-text">
+				<div class="partner-text">
+					<h5>Own2Feet</h5>
 					<p>
-						This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						This is the description of Own2Feet.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row vert-pad">
+			<div class="three columns">
+				<div class="partner-image">
+					<img src="http://placehold.it/200x150&text=image+four+here"></div>
+			</div>
+			<div class="nine columns">
+				<div class="partner-text">
+					<h5>ALittle4ALot</h5>
+					<p>
+						This is the description of ALittle4ALot.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 					</p>
 				</div>
 			</div>
