--- a/app/upload.html
+++ b/app/upload.html
@@ -73,10 +73,31 @@
 
 		<div class="content-container">
 			<div class="row">
-				<div class="twelve columns">
+				<div class="eleven columns centered">
 					<div class="content">
-						<h1>Upload Shiz</h1>
+						<h1>Submit Your Video</h1>
 					</div>
+					<h5>Submit Now - hyperlink to form</h5>
+<p>
+	If you are unsure of whether or not you are ready to begin your submission, please read the detailed information below. Also check out our submission Frequently Asked Questions at this link.(HYPERLINK)
+</p>
+<h6>Submission Materials</h6>
+<p>
+	We highly encourage you to submit ALL materials online, including the film itself. However, we will not download film files: all online entries must be hosted by the filmmaker or a third party (ie, Vimeo.com). If online entry is not possible, entrants must submit 2 DVDs (any region, NTSC encouraged). Please DO NOT include ANY promotional materials in your submission.
+</p>
+<h6>Shipping Information</h6>
+<p>
+	If you chose to submit your film by mail you are responsible for all shipping charges to IGOT GHFF and for any customs clearances and/or associated fees and taxes. Entry materials will not be returned.
+</p>
+<h6>Send entries to:</h6>
+<p>
+	IGOT Global Health Film Festival
+2550 23rd Street
+Building 9, 2nd Floor
+San Francisco, CA 94110
+Office: +01 (415) 206-4261
+</p>
+
 				</div>
 			</div>			
 		</div>
