--- a/app/schedule.html
+++ b/app/schedule.html
@@ -74,19 +74,42 @@
 		<div class="content-container">
 			<div class="row">
 				<div class="twelve columns">
-					<div class="content">
-						<h1>When we are happenin'</h1>
-					</div>
 				</div>
 			</div>			
 		</div>
 <div class="row">
-  <div class="eleven columns centered">
-    <p>When: Saturday July 6, 2013</p>
-    <p>Where: TBD</p>
-    <p>Time: 7pm-10pm</p>
-    <p>RSVP on Facebook here!</p>
-  </div>
+  <div class="twelve columns">
+    <h5>Saturday July 6, 2013</h5>
+    <h5>Location TBD</h5>
+    <h5>7pm-10pm, with live performance by XX after premier</h5>
+    <h5>RSVP on Facebook here!</h5>
+</div>
+</div>
+<div class="row">
+<div class="twelve columns">
+	<h4>Feature Film</h4>
+	<p class="strong">Title of Film (time)</p>
+	<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
+	</div>
+</div>
+<div class="row">
+	<div class="twelve columns">
+<h4> Short Films</h4>
+<p class="strong">Title of Film (time)</p>
+<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
+	</div>
+</div>
+<div class="row vert-pad">
+	<div class="twelve columns">
+<p class="strong">Title of Film (time)</p>
+<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
+	</div>
+</div>
+<div class="row">
+	<div class="twelve columns">
+<p class="strong">Title of Film (time)</p>
+<p>This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.</p>
+	</div>
 </div>
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
