Updated about page for syling consistency

--- a/app/why.html
+++ b/app/why.html
@@ -15,7 +15,6 @@
 		<link rel="stylesheet" href="stylesheets/foundation.css">
 		<link rel="stylesheet" href="stylesheets/app.css">
 		<script src="javascripts/modernizr.foundation.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/kevinburke/tecate/master/tecate.js"></script>
 </head>
 <body>
 		<div class="header">
@@ -82,54 +81,50 @@
 			</div>			
 		</div>
 <div class="row vert-pad">
-	<div class="eleven columns centered">
+	<div class="twelve columns">
 		<p>Film festivals have the power to bring issues to life, to connect people and motivate the masses.  If the saying “a picture is worth a thousand words” we are hoping a video is worth a million!  
 The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:</p>
 	</div>
 </div>
 <div class="row">
 	<div class="one columns"></div>
-	<div class="ten columns">
-		<p>Safe, effective surgery globally</p>
+	<div class="eleven columns">
+		<p class="strong">Safe, effective surgery globally</p>
 		<p>
 			Did you know XX% of the world die or are disabled due to lack of access to surgery
 		</p>
 	</div>
-	<div class="one columns"></div>
 </div>
 <div class="row vert-pad">
 	<div class="one columns"></div>
-	<div class="ten columns">
-		<p>Safe, clean and effective hospital systems</p>
+	<div class="eleven columns">
+		<p class="strong">Safe, clean and effective hospital systems</p>
 		<p>
 			Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
 		</p>
 	</div>
-	<div class="one columns"></div>
 </div>
 <div class="row">
 	<div class="one columns"></div>
-	<div class="ten columns">
-		<p>Access to rehabilitation and therapy</p>
+	<div class="eleven columns">
+		<p class="strong">Access to rehabilitation and therapy</p>
 		<p>
 			Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
 		</p>
 	</div>
-	<div class="one columns"></div>
 </div>
 <div class="row vert-pad">
 	<div class="one columns"></div>
-	<div class="ten columns">
-		<p>Public policy and resource allocation for surgical systems</p>
+	<div class="eleven columns">
+		<p class="strong">Public policy and resource allocation for surgical systems</p>
 		<p>
 			Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
 		</p>
 	</div>
-	<div class="one columns"></div>
 </div>
 <div class="row">
-	<div class="eleven columns centered">
-		<p>Want to learn more and help us advocate for the festival?  Join our petition: hyperlink</p>
+	<div class="twelve columns">
+		<p>Want to learn more and help us advocate for the festival?  Sign our petition in support of XXX: hyperlink</p>
 	</div>
 </div>
 		<script src="javascripts/jquery.js"></script>
